--- a/GoIT/markup/home/lesson4/css/style.css
+++ b/GoIT/markup/home/lesson4/css/style.css
@@ -1,33 +1,38 @@
-
-.main{
+          /*MAIN*/
+.main {
 	width: 1000px;
-	height: 1100px;
 	background: #fff;
 	margin: 0 auto;
+	position: relative;
+	box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.65);
 }
-.header{
+          /*HEADER*/
+header {
 	width: 940px;
 	height: 155px;
 	margin-top: 38px;
 	padding: 10px 30px;
 	position: relative;
-	
 }
 
-.logo{
-	width: 1000px;
-	height: 238px;
-	border-bottom: 1px solid #cacbcb;
-}
-
-.contacts{
+.contacts {
+	color: #5fa5bb;
+	display: block;
 	float: right;
-	font-size: 14px;
-	color:#5fa5bb;
+	padding-top: 9px;
 }
 
-.contries{
-	margin: 5px;
+.bold {
+	font-weight: bold;
+	padding-bottom: 8px;
+}
+
+.regular {
+	padding-bottom: 6px;
+}
+
+.countries{
+	margin: 3px;
 	float: right;
 	height: 50px;
 	clear: right;
@@ -36,59 +41,118 @@
 	top: 105px;
 }
 
-.contries li{
-	width: 50px;
-	height: 50px;
+.countries li{
+	width: 56px;
+	height: 56px;
 	float: left;
-	margin-left: 8px;
+	margin-left: 6px;
 	font-size: 10px;
 	text-align: center;
-	
 }
+
+.logo{
+	width: 1000px;
+	height: 238px;
+	border-bottom: 1px solid #138aa7;
+}
+        /*MENU*/
 nav {
-  width: 1000px;
-  height: 36px;
-  background-color: #333333;
-  box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.5);
+	width: 1000px;
+	height: 30px;
+	background-color: #333;
+	box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.5);
 }
 
 .menu li {
-  float: left;
-  height: 34px;
-  background: #333333;
-  position: relative;
+  	float: left;
+	height: 30px;
+	line-height: 10px;
+	background: #333;
+	position: relative;
 }
 
 .menu li a {
-  display: block;
-  text-decoration: none;
-  padding: 10px 39px;
-  color: #fff;
-  font-size: 14px;
-  }
-
+    display: block;
+    text-decoration: none;
+    padding: 10px 36px;
+    color: #fff;
+    font-size: 14px;
+}
 
 .menu li ul {
- display: none;
+	display: none;
+	z-index: 1;
 }
-
 
 .menu li:hover ul {
-  display: block;
-  position: absolute;
-  left: 0;
-   box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.5);
+	display: block;
+	position: absolute;
+	left: 0;
+	margin-left: 26px;
+	box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.5);
 }
 
-.menu ul li {
- float: none;
-  width: 150px;
+.menu ul>li>ul>li {
+    float: none;
+    width: 142px;
 }
 
-.menu ul li:first-child {
-  padding-top: 2px;
+.menu ul>li>ul>li:first-child {
+    padding-top: 2px;
 }
 
-.menu li ul li a {
-  padding-left: 10px;
+.menu ul>li>ul>li>a {
+    padding-left: 10px;
+}
+
+.triangle {
+	padding-left: 7px;
+}
+
+.container {
+    width: 1000px;
+    overflow: hidden;
+    margin-top: 4px;
+}
+
+.container p {
+	padding: 5px 16px 10px 16px;
+}
+.container h1{
+	font-size: 18px;
+	color: #424c43;
+	text-align: center;
+	font-weight: bold;
+	margin: 10px;
+}
+
+.box-left {
+    width: 21%;
+    float: left;
+    background: #edeef0;
+    padding-bottom: 20000px;
+    margin-bottom: -20000px;
+}
+
+.box-center {
+    width: 58%;
+    float: left;
+    background: #fff;
+    padding-bottom: 20000px;
+    margin-bottom: -20000px;
+}
+
+.box-right {
+    width: 21%;
+    float: left;
+    background: #edeef0;
+    padding-bottom: 20000px;
+    margin-bottom: -20000px;
+}
+
+.footer p {
+    font-size: 12px;
+    text-align: center;
+    color: white;
+    margin-bottom: 10px;
 }
