--- a/GoIT/markup/home/lesson3/css/reset.css
+++ b/GoIT/markup/home/lesson3/css/reset.css
@@ -27,6 +27,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
 	line-height: 1;
 	background: #f9f9f9;
 }
