--- a/GoIT/markup/home/lesson3/css/style.css
+++ b/GoIT/markup/home/lesson3/css/style.css
@@ -1,105 +1,150 @@
 
 .container {
 	width: 958px;
-	height: 900px;
 	margin: 0 auto;
-	padding: 50px;
+	padding: 50px 48px 60px 48px;
 	background: #fff;
 	border: 1px solid #dbdbdb ;
 }
 		/*HEADER*/
-.header {
-	padding-bottom: 50px;
-}
-.menu {
-	width: 965px;
-	height: 40px;
-	margin: 0 auto;
+.logo {
+	float: left;
 	margin-bottom: 40px;
-		background: linear-gradient(to bottom, #5c5c5c 0%, #454444 53%, #454444 100%);
+}
+.header_clear{
+	clear: both;
+}
+
+        /*MENU*/
+.menu {
+	height: 40px;
+	background: linear-gradient(to bottom, #5c5c5c 0%, #454444 53%, #454444 100%);
 }
 
 .menu li {
-	display:inline;
-	padding-right: 25px;
-	margin-right: 1px;
-	font-size:14px; 
+	float: left;
 }
-.menu a {  
-     
-    padding: 10px 25px; 
-    color: #fff;  
-}
-.menu a:hover {
-	background: #434343;
-	border: 1px solid gray;
-}
-a{
-	line-height: 40px;
+.menu li a { 
+	display: block; 
+	margin: 0 16px 0 16px; 
+	padding: 0 24px 0 24px; 
+	line-height: 40px; 
 	text-decoration: none; 
+	color: white; 
+	text-shadow: 2px 1px 1px rgba(0,0,0,0.5);
 }
 
-		/*CONTENT*/
+.menu li a:first-child { 
+	margin-left: 0; 
+}
+
+.menu a:hover { 
+	padding: 0 23px 0 23px; 
+	background: linear-gradient(to top, #2e2e2e,#4a4a4a); 
+	border-left: solid 1px #838383; 
+	border-right: solid 1px #838383; 
+}
+
+		/*LEFT MENU*/
+		
 .left-menu ul {
 	float: left;
+	border: 1px solid #c8c8c8; 
 }
 
 .left-menu li {
-	background: #fff;
-	width: 240px;
-	height: 40px;
-	border: 1px solid #c8c8c8;
-	font-size:14px;
+	border-bottom: 1px solid #c8c8c8; 
+}
+.left-menu li:last-child { 
+	border-bottom: none;
 }
 
-.left-menu a { 
+.left-menu li a {
+display: block;
+width: 214px;
+padding: 0 0 0 23px;
+line-height: 39px;
+text-decoration: none;
+color: #656363;
+}
 
-	padding: 14px 25px;
-	color: #000;    
+.left-menu li a:hover {
+width: 202px;
+padding: 0 0 0 35px;
+background-color: #f9f9f9;
+color: #2c2c2c;
+-webkit-transition-duration: 0.3s;
+-o-transition-duration: 0.3s;
+-moz-transition-duration: 0.3s;
+transition-duration: 0.3s;
 }
-.left-menu a:hover {
-	padding-left: 40px;
+
+		/*CONTENT*/
+
+.item {
+padding: 40px 0 20px;
 }
+
 .content {
-	margin-left: 280px;
-	width: 580px;
-	height: 300px;
-	margin-left: 280px;
-	padding:50px;
-	border: 1px solid #c8c8c8;
+	float: right; 
+	width: 678px;
+	text-align: left;
 }
 
-p {
-	display: block;
-	margin-left: 300px;
-	margin-top: 40px;
-	line-height: 18px;
+.velo_img {
+	height: 370px;
+	background-color: white;
+	border: solid 1px #c8c8c8;
+	text-align: center;
+	padding-top:40px;
+}
+
+
+.item_short_descr { 
+	margin: 40px 24px; 
+	font-size: 13px; 
+	line-height: 1.5em; 
+	color: #2c2c2c; 
+} 
+
+.content_clear{
+clear: both;
 }
 
  		/*FOOTER*/
 .footer {
-	width: 965px;
 	height: 40px;
-	margin: 0 auto;
-	margin-top: 40px;
-	background: #e1e1e1;
+	padding: 0 24px; 
+	background-color: #e1e1e1;
 }
 
 .footer li {
-	display:inline-block;
-	padding-right: 25px;
-	margin-right: 1px;
-	background: #e1e1e1;
-	font-size:14px;
+	float: left;
+	margin: 0 40px;
 }
-.footer a {   
-    padding: 15px 25px;  
-    color: #000;
-    
+
+
+.footer li:first-child { 
+	margin-left: 0;
 }
+
+.footer li a, .copy_r { 
+	display: block; 
+	line-height: 40px; 
+	font-size: 13px; 
+	text-decoration: none; 
+	color: #2c2c2c; 
+}
+
 .footer a:hover {
 	text-decoration: underline; 
 }
-.footer li:last-child {
-	padding-left:175px;
+
+.copyright{
+	float: right;
+	line-height: 40px;
+}
+
+.footer_clear{
+	clear: both;
 }
