--- a/GoIT/markup/home/lesson5/css/reset.css
+++ b/GoIT/markup/home/lesson5/css/reset.css
@@ -26,8 +26,8 @@ footer, header, hgroup, menu, nav, section {
 
 
 body {
-	font-family: Tahoma;
-  	font-size: 14px;
+	font-family: "Helvetica Neue Ultralight", Arial, sans-serif;
+  	font-size: 15px;
 	line-height: 1;
 
 }
