--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Helvetica Neue Ultralight';
+    src: url('../fonts/helveticaneuecyr-ultralight-webfont.eot');
+    src: url('../fonts/helveticaneuecyr-ultralight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/helveticaneuecyr-ultralight-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneuecyr-ultralight-webfont.woff') format('woff'),
+         url('../fonts/helveticaneuecyr-ultralight-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .main {
 	width:1215px;
 	height: 992px;
@@ -10,7 +22,7 @@ header {
 }
 		/*CONTENT*/
 section {
-	height: 100%;
+	min-height: 100%;
 	background: url(../img/background.jpg) #fff;
 	position: relative;
 }
@@ -38,7 +50,7 @@ section {
 
 .line {
  	border-right: 1px solid #56a2dc;
-    margin: 2px 19px 0 -13px;
+    margin: 2px 19px 0 -15px;
     padding: 3px 0 2px 0;
     height: 26px;
 }
