--- a/GoIT/js/JS19-20/src/style/style.css
+++ b/GoIT/js/JS19-20/src/style/style.css
@@ -21,10 +21,10 @@ header {
     header .header__logo img {
       float: left;
       margin-right: 12px; }
-    header .header__logo .header__logo__text--top {
+    header .header__logo .header__text--top {
       font-family: "Ubuntu", Arial, sans-serif;
       font-size: 29px; }
-    header .header__logo .header__logo__text--bottom {
+    header .header__logo .header__text--bottom {
       font-family: "Ubuntu", Arial, sans-serif;
       font-size: 13px; }
   header .header__contacts {
@@ -121,18 +121,18 @@ header {
         color: #f4b60d; }
       header .carousel .owl-carousel__text .owl-carousel__text--center {
         width: 190px; }
-  header .header__information-block {
+  header .information__block {
     margin: 55px 0 90px 0;
     position: relative;
     overflow: hidden; }
-    header .header__information-block .header__information {
+    header .information__block .information {
       position: relative;
       overflow: hidden;
       float: left;
       margin-right: 40px;
       width: 360px;
       font-family: "Ubuntu", Arial, sans-serif; }
-      header .header__information-block .header__information .header__information__huge-number {
+      header .information__block .information .information__huge-number {
         display: block;
         font-weight: bold;
         color: #efeff0;
@@ -140,171 +140,173 @@ header {
         float: left;
         height: 190px;
         margin-right: 40px; }
-      header .header__information-block .header__information img {
+      header .information__block .information img {
         padding-top: 15px; }
-      header .header__information-block .header__information .header__information__name {
+      header .information__block .information .information__name {
         margin: 16px 0 18px 0;
         display: inline-block;
         width: 230px;
         font-size: 23px;
         font-weight: bold;
         color: #2a2d32; }
-      header .header__information-block .header__information .header__information__text {
+      header .information__block .information .information__text {
         color: #2a2d32;
         margin-bottom: 16px;
         font-size: 13px; }
-      header .header__information-block .header__information .header__information__button {
+      header .information__block .information .information__button {
         text-decoration: none;
         font-weight: bold;
         font-size: 13px;
         color: #2a2d32; }
-      header .header__information-block .header__information .header__information__button:hover {
+      header .information__block .information .information__button:hover {
         color: #248cec; }
-    header .header__information-block .header__information--third {
+    header .information__block .information--third {
       margin-right: 0; }
 
 .content {
   margin-top: 75px;
   background: #2a2d32; }
-  .content .content__services-container {
+  .content .services__container {
     position: relative;
     overflow: hidden;
     width: 1160px;
     margin: 0 auto;
     font-family: "Ubuntu", Arial, sans-serif; }
-    .content .content__services-container .content__services__title {
+    .content .services__container .services__title {
       color: #ffffff;
       margin: 46px 0 55px 0;
       font-size: 24px; }
-  .content .content__services {
+  .content .services__block {
     width: 260px;
     position: relative;
     overflow: hidden;
     float: left;
     margin-right: 40px; }
-    .content .content__services .content__services--img {
+    .content .services__block .services__img {
       display: block;
       height: 260px;
       background: #248cec;
       text-decoration: none; }
-    .content .content__services .content__services__text {
+    .content .services__block .services__text {
       text-decoration: none;
       display: block;
       margin: 22px auto 70px auto;
       color: #ffffff;
       text-align: center;
       font-size: 16px; }
-    .content .content__services img {
+    .content .services__block img {
       height: 260px;
       width: 260px; }
-    .content .content__services img:hover {
+    .content .services__block img:hover {
       opacity: 0.5; }
-    .content .content__services .content__services__text:hover {
+    .content .services__block .services__text:hover {
       color: #f4b60d; }
-  .content .content__services--foreth {
+  .content .services__block--fourth {
     margin-right: 0; }
-  .content .content__news-container {
+  .content .news__box {
     background: #f7f7f7; }
-    .content .content__news-container .content__news {
+    .content .news__box .news {
       position: relative;
       overflow: hidden;
       width: 1160px;
       margin: 0 auto;
       padding: 63px 0 80px 0; }
-      .content .content__news-container .content__news .content__latest-news {
+      .content .news__box .news .news__latest {
         position: relative;
         overflow: hidden;
         float: left;
         width: 560px; }
-        .content .content__news-container .content__news .content__latest-news .content__latest-news__title {
+        .content .news__box .news .news__latest .news__title {
           font-family: "Ubuntu", Arial, sans-serif;
           font-size: 24px;
           margin-bottom: 40px;
           color: #2a2d32;
           font-weight: bold; }
-        .content .content__news-container .content__news .content__latest-news .content__latest-news__box {
+        .content .news__box .news .news__latest .news__container {
           font-family: "Ubuntu", Arial, sans-serif;
           position: relative;
           overflow: hidden;
           color: #2a2d32; }
-          .content .content__news-container .content__news .content__latest-news .content__latest-news__box img {
+          .content .news__box .news .news__latest .news__container img {
             float: left;
             margin-right: 30px; }
-          .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--title {
+          .content .news__box .news .news__latest .news__container .news__name {
             font-size: 16px;
             font-weight: bold;
             margin-bottom: 10px; }
-          .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--by {
+          .content .news__box .news .news__latest .news__container .news__by {
             float: left;
             font-size: 13px;
             margin-right: 10px; }
-            .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--by span {
+            .content .news__box .news .news__latest .news__container .news__by span {
               color: #248cec; }
-          .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--comments {
+          .content .news__box .news .news__latest .news__container .news__comments {
             font-size: 13px; }
-            .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--comments span {
+            .content .news__box .news .news__latest .news__container .news__comments span {
               color: #248cec; }
-          .content .content__news-container .content__news .content__latest-news .content__latest-news__box .content__latest-news--text {
+          .content .news__box .news .news__latest .news__container .news__text {
             margin-top: 24px;
             font-size: 13px; }
-        .content .content__news-container .content__news .content__latest-news .content__latest-news__box--second {
+        .content .news__box .news .news__latest .news__container--second {
           margin-top: 30px; }
-      .content .content__news-container .content__news .content__banners {
+      .content .news__box .news .banners {
         float: left;
         width: 560px;
-        margin-left: 40px; }
-        .content .content__news-container .content__news .content__banners .content__banners__title {
+        margin-left: 40px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box; }
+        .content .news__box .news .banners .banners__title {
           font-family: "Ubuntu", Arial, sans-serif;
           font-size: 24px;
           margin-bottom: 40px;
           color: #2a2d32;
           font-weight: bold; }
-        .content .content__news-container .content__news .content__banners .banner {
-          display: block;
-          font-family: "Ubuntu", Arial, sans-serif;
+        .content .news__box .news .banners .accordion__tab {
           position: relative;
-          overflow: hidden;
-          margin-bottom: 5px; }
-          .content .content__news-container .content__news .content__banners .banner .banner__title {
-            font-size: 16px;
-            font-weight: bold;
-            width: 100%;
-            height: 40px;
-            border: 1px solid #ffffff;
+          border: 1px solid #e8e8e8;
+          background-color: #FFF;
+          padding-left: 38px;
+          cursor: pointer;
+          margin-bottom: 5px;
+          height: 40px; }
+          .content .news__box .news .banners .accordion__tab:before {
+            content: " +";
+            position: absolute;
+            top: 4px;
+            left: 11px;
             color: #2a2d32;
-            background: #ffffff;
-            border-color: #e8e8e8;
-            font-weight: bold; }
-            .content .content__news-container .content__news .content__banners .banner .banner__title .banner__title__plus {
-              display: block;
-              width: 40px;
-              height: 40px;
-              text-align: center;
-              border-right: 1px solid #e8e8e8;
-              float: left;
-              font-size: 25px; }
-            .content .content__news-container .content__news .content__banners .banner .banner__title .banner__title__minus {
-              display: none;
-              width: 40px;
-              height: 40px;
-              text-align: center;
-              border-right: 1px solid #e8e8e8;
-              float: left;
-              font-size: 25px; }
-            .content .content__news-container .content__news .content__banners .banner .banner__title .banner__title__text {
-              padding: 10px 0 0 60px; }
-          .content .content__news-container .content__news .content__banners .banner .banner__content {
-            display: none;
-            margin: 25px 0 35px 40px;
-            font-size: 13px; }
-        .content .content__news-container .content__news .content__banners .banner--modify .banner__title {
+            font-size: 27px; }
+        .content .news__box .news .banners .accordion__title {
+          border-left: 1px solid #e8e8e8;
+          padding-left: 12px;
           color: #2a2d32;
-          background: #ffffff;
-          border-color: #e8e8e8; }
-          .content .content__news-container .content__news .content__banners .banner--modify .banner__title .banner__title__plus {
-            border-color: #e8e8e8; }
-        .content .content__news-container .content__news .content__banners .banner--modify .banner__content {
-          display: none; }
+          background-color: #FFF;
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 40px;
+          text-transform: uppercase; }
+        .content .news__box .news .banners .accordion_article {
+          display: none;
+          height: 100px;
+          overflow: hidden;
+          padding: 25px 0 0 40px;
+          margin-bottom: 35px;
+          color: #8a8a8a;
+          font-size: 13px;
+          font-weight: 400;
+          line-height: 20px; }
+        .content .news__box .news .banners .accordion__tab--active {
+          background-color: #f4b60d; }
+          .content .news__box .news .banners .accordion__tab--active:before {
+            content: "-";
+            top: 2px;
+            left: 14px;
+            color: #fff; }
+        .content .news__box .news .banners .accordion__title--active {
+          border-left: 1px solid #f6c53d;
+          background-color: #f4b60d;
+          color: #fff; }
 
 .partners {
   width: 1160px;
