--- a/portfolio/hahk/src/style/style.scss
+++ b/portfolio/hahk/src/style/style.scss
@@ -286,11 +286,11 @@ header {
       .header__fixed {
 
         .mobile__menu {
-          position: absolute;
+
 
           display: none;
           width: 100%;
-          // height: 800px;
+          height: 800px;
           z-index: 99;
           background: rgba(1, 199, 217, 1);
           .list-item {
